--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.2"
+    "knex": "^0.20.13",
+    "nodemon": "^2.0.2",
+    "pg": "^8.0.0"
   }
 }
